force-app/main/default/objects/fsl_tech_generateurRessource__c/fsl_tech_generateurRessource__c.object-meta.xml
<CustomObject>
    <description>CGI - FSL : Objet technique utilisé pour la création automatique des users et ressources rattachées</description>
    <label>FSL Générateur de ressource</label>
    <nameField>
        <label>FSL Générateur de ressource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL Générateur de ressources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>