force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_active__c.field-meta.xml
<CustomField>
    <fullName>fsl_active__c</fullName>
    <label>Active</label>
    <length>255</length>
    <type>Text</type>
</CustomField>