force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_alias__c.field-meta.xml
<CustomField>
    <fullName>fsl_alias__c</fullName>
    <label>Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>