force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_communityNickname__c.field-meta.xml
<CustomField>
    <fullName>fsl_communityNickname__c</fullName>
    <label>Community Nick name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>