force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_contentEmailAsAndWhen__c.field-meta.xml
<CustomField>
    <fullName>fsl_contentEmailAsAndWhen__c</fullName>
    <label>Content Email As And When</label>
    <length>255</length>
    <type>Text</type>
</CustomField>