force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_contentNoEmail__c.field-meta.xml
<CustomField>
    <fullName>fsl_contentNoEmail__c</fullName>
    <label>Content No Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>