force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_dateEntree__c.field-meta.xml
<CustomField>
    <fullName>fsl_dateEntree__c</fullName>
    <label>Date d&apos;entrée</label>
    <length>255</length>
    <type>Text</type>
</CustomField>