force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_dateEntreeDepot__c.field-meta.xml
<CustomField>
    <fullName>fsl_dateEntreeDepot__c</fullName>
    <label>Date de d&apos;entrée au dépôt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>