force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_dateSortie__c.field-meta.xml
<CustomField>
    <fullName>fsl_dateSortie__c</fullName>
    <label>Date de sortie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>