force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_dateSortieDepot__c.field-meta.xml
<CustomField>
    <fullName>fsl_dateSortieDepot__c</fullName>
    <label>Date de sortie du dépôt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>