force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_defaultGroupNotificationFrequency__c.field-meta.xml
<CustomField>
    <fullName>fsl_defaultGroupNotificationFrequency__c</fullName>
    <label>Default Notification Frequency when Join</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>