force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_depotCodeGC__c.field-meta.xml
<CustomField>
    <fullName>fsl_depotCodeGC__c</fullName>
    <label>Code GC du dépôt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>