force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_digestFrequency__c.field-meta.xml
<CustomField>
    <fullName>fsl_digestFrequency__c</fullName>
    <label>Chatter Email Highlights Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>