force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_email__c.field-meta.xml
<CustomField>
    <fullName>fsl_email__c</fullName>
    <description>CGI - FSL : Email de l&apos;utilisateur</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>