force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_emailEncodingKey__c.field-meta.xml
<CustomField>
    <fullName>fsl_emailEncodingKey__c</fullName>
    <label>Email Encoding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>