force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_firstName__c.field-meta.xml
<CustomField>
    <fullName>fsl_firstName__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>