force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_insertGroupMemberID__c.field-meta.xml
<CustomField>
    <fullName>fsl_insertGroupMemberID__c</fullName>
    <label>fsl_insertGroupMemberID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>