force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_insertPermissionID__c.field-meta.xml
<CustomField>
    <fullName>fsl_insertPermissionID__c</fullName>
    <label>fsl_insertPermissionID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>