force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_insertTerritoryMemberID__c.field-meta.xml
<CustomField>
    <fullName>fsl_insertTerritoryMemberID__c</fullName>
    <label>fsl_insertTerritoryMemberID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>