force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_insertUserTerritoryID__c.field-meta.xml
<CustomField>
    <fullName>fsl_insertUserTerritoryID__c</fullName>
    <label>fsl_insertUserTerritoryID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>