force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_languageLocaleKey__c.field-meta.xml
<CustomField>
    <fullName>fsl_languageLocaleKey__c</fullName>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>