force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_lastName__c.field-meta.xml
<CustomField>
    <fullName>fsl_lastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>