force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_localeSidKey__c.field-meta.xml
<CustomField>
    <fullName>fsl_localeSidKey__c</fullName>
    <label>Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>