force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_matriculeGC__c.field-meta.xml
<CustomField>
    <fullName>fsl_matriculeGC__c</fullName>
    <externalId>true</externalId>
    <label>Matricule GC</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>