force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_messageErreur__c.field-meta.xml
<CustomField>
    <fullName>fsl_messageErreur__c</fullName>
    <label>Message d&apos;erreur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>