force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_metier__c.field-meta.xml
<CustomField>
    <fullName>fsl_metier__c</fullName>
    <label>Métier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>