force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_mobilePhone__c.field-meta.xml
<CustomField>
    <fullName>fsl_mobilePhone__c</fullName>
    <label>Cell</label>
    <length>255</length>
    <type>Text</type>
</CustomField>