force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_name__c.field-meta.xml
<CustomField>
    <fullName>fsl_name__c</fullName>
    <label>Full Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>