force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_pays__c.field-meta.xml
<CustomField>
    <fullName>fsl_pays__c</fullName>
    <label>Pays</label>
    <length>255</length>
    <type>Text</type>
</CustomField>