force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_phone__c.field-meta.xml
<CustomField>
    <fullName>fsl_phone__c</fullName>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>