force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_profondeurCA__c.field-meta.xml
<CustomField>
    <fullName>fsl_profondeurCA__c</fullName>
    <label>Profondeur de calcul du CA</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>