force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_roleID__c.field-meta.xml
<CustomField>
    <fullName>fsl_roleID__c</fullName>
    <label>Role ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>