force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_SGID__c.field-meta.xml
<CustomField>
    <fullName>fsl_SGID__c</fullName>
    <label>SGID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>