force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_statut__c.field-meta.xml
<CustomField>
    <fullName>fsl_statut__c</fullName>
    <label>Statut d&apos;intégration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>