force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_timeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>fsl_timeZoneSidKey__c</fullName>
    <label>Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>