force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_title__c.field-meta.xml
<CustomField>
    <fullName>fsl_title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>