force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_typePlanification__c.field-meta.xml
<CustomField>
    <fullName>fsl_typePlanification__c</fullName>
    <label>Type de planification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>