force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_upsertServiceResourceID__c.field-meta.xml
<CustomField>
    <fullName>fsl_upsertServiceResourceID__c</fullName>
    <label>fsl_upsertServiceResourceID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>