force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_upsertUserID__c.field-meta.xml
<CustomField>
    <fullName>fsl_upsertUserID__c</fullName>
    <label>fsl_upsertUserID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>