force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_username__c.field-meta.xml
<CustomField>
    <fullName>fsl_username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>