force-app/main/default/objects/fsl_tech_generateurRessource__c/fields/fsl_ville__c.field-meta.xml
<CustomField>
    <fullName>fsl_ville__c</fullName>
    <label>Ville</label>
    <length>255</length>
    <type>Text</type>
</CustomField>